// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductDescription /> should not render if no data is available 1`] = `
<Description
  html={null}
  navigate={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Portal
    name="product.description.before"
    props={null}
  />
  <Portal
    name="product.description"
    props={null}
  >
    <div
      className="css-16vd0g8"
    >
      <div
        aria-hidden={true}
        className="css-10lhp8m"
        role="heading"
      >
        <Translate
          className=""
          params={Object {}}
          string="product.description_heading"
        >
          <span
            className=""
          >
            product.description_heading
          </span>
        </Translate>
      </div>
      <PlaceholderParagraph
        className="css-1k8v9u5"
        lines={3}
        ready={false}
      >
        <div>
          <PlaceholderLabel
            className="css-1k8v9u5"
            key="0"
            ready={false}
            style={
              Object {
                "width": "95%",
              }
            }
          >
            <div
              className="css-qd8qpa css-1k8v9u5"
              style={
                Object {
                  "width": "95%",
                }
              }
            />
          </PlaceholderLabel>
          <PlaceholderLabel
            className="css-1k8v9u5"
            key="1"
            ready={false}
            style={null}
          >
            <div
              className="css-qd8qpa css-1k8v9u5"
              style={null}
            />
          </PlaceholderLabel>
          <PlaceholderLabel
            className="css-1k8v9u5"
            key="2"
            ready={false}
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <div
              className="css-qd8qpa css-1k8v9u5"
              style={
                Object {
                  "width": "100%",
                }
              }
            />
          </PlaceholderLabel>
        </div>
      </PlaceholderParagraph>
    </div>
  </Portal>
  <Portal
    name="product.description.after"
    props={null}
  />
</Description>
`;

exports[`<ProductDescription /> should render description if data is available 1`] = `
<Description
  html="<h1>foo</h1>"
  navigate={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Portal
    name="product.description.before"
    props={null}
  />
  <Portal
    name="product.description"
    props={null}
  >
    <div
      className="css-16vd0g8"
    >
      <div
        aria-hidden={true}
        className="css-10lhp8m"
        role="heading"
      >
        <Translate
          className=""
          params={Object {}}
          string="product.description_heading"
        >
          <span
            className=""
          >
            product.description_heading
          </span>
        </Translate>
      </div>
      <PlaceholderParagraph
        className="css-1k8v9u5"
        lines={3}
        ready={true}
      >
        <div
          className="css-jo3g31"
          data-test-id="description"
        >
          <HtmlSanitizer
            className={null}
            decode={false}
            processStyles={false}
            settings={
              Object {
                "handleClick": [Function],
                "html": "<h1>foo</h1>",
              }
            }
          >
            <div
              className={null}
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<h1>foo</h1>",
                }
              }
            />
          </HtmlSanitizer>
        </div>
      </PlaceholderParagraph>
    </div>
  </Portal>
  <Portal
    name="product.description.after"
    props={null}
  />
</Description>
`;
